# openpose-tf

./: .gitignore  benchmark_data.py  cache.py  config.ini  demo_data_augmentation.py  demo_keypoints.py  demo_label.py  demo_label2.py  estimate.py  estimate_camera.py  estimate_debug.py  estimate_pb.py  feature_debugger.py  import_hdf5.py  print_checkpoint.py  pruning.py  receptive_field_analyze.py  receptive_field_show.py  savepb.py  train.py  variable_stat.py
backbone/: inception_v4.py  original.py  resnet.py  tf_models.py  vgg.py  vgg.tsv  vgg19.tsv  vgg_19.tsv
cache/: coco.py  hand_nyu.py  hand_nyu.txt  tools.py
caffe/: export_hdf5.py
config/: config.ini  hand36.ini  inception4_4.ini  inception4_4_4.ini  original.ini  original_hand21.ini  original_person18_19.ini  person17.ini  unet.ini  unet2.ini  unet23sqz3_1.ini  unet2_2.ini  unet2sqz3.ini  unet2sqz3_1.ini  unet3.ini  unet3sqz3.ini  unet3sqz3_2.ini  unet64-sqz3.ini  unet64.ini  unet_interp2sqz3.ini  uneti2sqz3.ini  uneti2sqz3_1.ini
config/dataset/: hand36.tsv  person17.tsv  person18.txt  person18_19.txt
config/dataset/hand21/: hand_nyu.txt
config/dataset/hand36/: hand_nyu.tsv
config/dataset/person17/: coco.tsv
config/dataset/person18/: coco.tsv
config/dataset/person18_19/: coco.tsv
config/mapper/: original.tsv
config/mapper/original/: hand21.tsv
config/summary/: scalar.txt
config/summary/image/: split.txt
openpose/: CMakeLists.txt
openpose/libs/libopenpose/openpose/: check.cc  check.hpp  debug_global.cc  debug_global.hpp  render.hpp  tsv.hpp
openpose/libs/libopenpose/openpose/data/: augmentation.hpp  convert.hpp  label.hpp  npy.hpp  render.hpp  tsv.hpp
openpose/libs/libopenpose/openpose/postprocess/: estimate.hpp  hungarian.cc  hungarian.hpp  nms.hpp
openpose/libs/openpose/: CMakeLists.txt
openpose/libs/openpose/openpose/: convert.hpp  render.hpp  tsv.hpp
openpose/libs/openpose/openpose/data/: augmentation.hpp  bbox.hpp  label.hpp
openpose/libs/openpose/openpose/postprocess/: estimate.hpp  hungarian.cc  hungarian.hpp  nms.hpp
openpose/projects/openpose_ops/: AugmentationOp.cc  AugmentationOp.hpp  BboxOp.cc  BboxOp.hpp  CMakeLists.txt  LabelOp.cc  LabelOp.hpp
openpose/projects/pyopenpose/: CMakeLists.txt  convert.hpp  estimate.hpp  hungarian.hpp  main.cc  nms.cc  nms.hpp
openpose/test/augmentation/: main.cc
openpose/test/dump/: limbs_index.tsv
openpose/test/dump/data/: COCO_train2014_000000000077.npy  COCO_val2014_000000000294.npy
openpose/test/dump/featuremap/: limbs.npy  limbs_index.tsv  parts.npy
openpose/test/estimate/: CMakeLists.txt  main.cc
openpose/test/label/: CMakeLists.txt  main.cc
openpose_ops/: CMakeLists.txt
openpose_ops/ops/: AugmentationOp.cc  AugmentationOp.hpp  CMakeLists.txt  LabelOp.cc  LabelOp.hpp  shape.cc  shape.h
openpose_ops/src/openpose/: augmentation.hpp  convert.hpp  label.hpp  npy.hpp  render.hpp  tsv.hpp
openpose_ops/test/: CMakeLists.txt
openpose_ops/test/augmentation/: CMakeLists.txt  main.cc
openpose_ops/test/dump/: COCO_train2014_000000000036.npy  COCO_train2014_000000000049.npy  COCO_train2014_000000000086.npy  COCO_val2014_000000000136.npy  COCO_val2014_000000000139.npy  COCO_val2014_000000000192.npy  COCO_val2014_000000000241.npy  COCO_val2014_000000000257.npy
openpose_ops/test/label/: CMakeLists.txt  main.cc
stages/: __init__.py  original.py  original.tsv  unet.py  unet.tsv  unet_interp.py
stages/original/: hand21.py  person18_19.py
utils/: __init__.py  data.py  preprocess.py  visualize.py
utils/data/: __init__.py  augmentation.py
